--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "cors-anywhere": "^0.4.3",
+    "dotenv": "^8.2.0",
     "firebase": "^8.2.2",
     "install-peerdeps": "^3.0.3",
     "react": "^17.0.1",
