--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-aws-exports.js
+# aws-exports.js # TODO: add back later
 awsconfiguration.json
 amplifyconfiguration.json
 amplify-build-config.json
